Fix contrast for athlete info on Ahlete details page when in light mode

--- a/play-media/src/styles/components/AthleteDetails/AthleteDetails.css
+++ b/play-media/src/styles/components/AthleteDetails/AthleteDetails.css
@@ -15,7 +15,8 @@ section.container.content-section.athlete-info {
     @apply flex-row justify-around;
 
     span {
-      @apply text-gray;
+      @apply text-black-lightest;
+      @apply dark:text-gray;
     }
   }
 
